<resources>
    <string name="app_name">CRAFTS</string>

    <string name="addFavorite">加入最愛</string>
    <string name="mainActivity">主行程</string>
    <string name="homePage">首頁</string>
    <string name="category">分類</string>
    <string name="myFavorite">我的最愛</string>
    <string name="chart">統計圖表</string>
    <string name="about">關於</string>
    <string name="s1101512">1101512 夏詩婷</string>
    <string name="contact">s1101512@mail.yzu.edu.tw</string>
    <string name="s1103301">1103301 傅詳閎</string>
    <string name="contact2">s1103301@mail.yzu.edu.tw</string>

    <string name="sideMenuOpen">開啟側邊欄</string>
    <string name="sideMenuClose">關閉側邊欄</string>
    <string name="title_activity_category">categoryActivity</string>
    <string name="title_activity_about">aboutpageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="refer">參考資料：\nhttp://www.wikicfp.com/cfp/</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank Title</string>
    <string name="ContentTitle">內容</string>
    <string name="GoBack">回到上一頁</string>

</resources>